# Action_Game

./: README.md
doc/: 2024大作业自评表-顾一马.xlsx  大作业文档-顾一马.aux  大作业文档-顾一马.tex  大作业文档-顾一马.toc
src/: CMakeLists.txt
src/assets/: assets.qrc
src/src/: MyGame.cpp  MyGame.h  main.cpp
src/src/CheatCode/: CheatCodeDialog.cpp  CheatCodeDialog.h
src/src/Items/: CheatCodeManager.cpp  CheatCodeManager.h  Gravitational.cpp  Gravitational.h  GravityMountableItem.cpp  GravityMountableItem.h  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  ItemType.h  Mountable.cpp  Mountable.h
src/src/Items/Armors/: Armor.cpp  Armor.h  EnemyShirt.cpp  EnemyShirt.h  IceProofArmor.cpp  IceProofArmor.h  OldShirt.cpp  OldShirt.h
src/src/Items/Characters/: Character.cpp  Character.h  Enemy.cpp  Enemy.h  Link.cpp  Link.h
src/src/Items/HeadEquipments/: HeadEquipment.cpp  HeadEquipment.h
src/src/Items/LegEquipments/: LegEquipment.cpp  LegEquipment.h
src/src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h
src/src/Items/Platfrom/: AirPlatform.cpp  AirPlatform.h  MetalPlatform.cpp  MetalPlatform.h  Platform.cpp  Platform.h  RockPlatform.cpp  RockPlatform.h  WoodPlatform.cpp  WoodPlatform.h
src/src/Items/SpecialEffect/: FireEffect.cpp  FireEffect.h  FrozenEffect.cpp  FrozenEffect.h  ThunderEffect.cpp  ThunderEffect.h
src/src/Items/StatusBar/: StatusBar.cpp  StatusBar.h  StatusIcon.cpp  StatusIcon.h
src/src/Items/Weapon/: Arrow.cpp  Arrow.h  Bow.cpp  Bow.h  Weapon.cpp  Weapon.h
src/src/Items/Weapon/Arrow/: FireArrow.cpp  FireArrow.h  FrozenArrow.cpp  FrozenArrow.h  NormalArrow.cpp  NormalArrow.h  SpareArrow.cpp  SpareArrow.h  SpareFireArrow.cpp  SpareFireArrow.h  SpareFrozenArrow.cpp  SpareFrozenArrow.h  SpareNormalArrow.cpp  SpareNormalArrow.h  SpareThunderArrow.cpp  SpareThunderArrow.h  ThunderArrow.cpp  ThunderArrow.h
src/src/Items/Weapon/Bow/: IronBow.cpp  IronBow.h  IronHandBow.cpp  IronHandBow.h  WoodBow.cpp  WoodBow.h
src/src/Items/Weapon/Sword/: FireSword.cpp  FireSword.h  FreezeTHS.cpp  FrezzeTHS.h  IronStaff.cpp  IronStaff.h  Sword.cpp  Sword.h  ThunderSword.cpp  ThunderSword.h  WoodSword.cpp  WoodSword.h
src/src/Scenes/: BattleScene.cpp  BattleScene.h  Scene.cpp  Scene.h
